fixed height in hero section, work section mobile implementation

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -37,4 +37,18 @@
             color: v.$color_white;
         }
     }
+
+    @media (max-width: v.$media_min) {
+        width: 140px;
+        height: 170px;
+
+        &__title {
+            @include m.font(14px, 400, v.$color_black);
+        }
+    
+        &__desc {
+            text-align: center;
+            @include m.font(11px, 300, v.$color_black);
+        }
+    }
 }
