--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -6,7 +6,7 @@
 .hero {
     position: relative;
     max-width: 1260px;
-    height: 830px;
+    height: 100%;
     margin: 0 auto;
     padding: 150px 0 0 0;
     background: url(../assets/img/cloud_alpha.webp) center/contain no-repeat;
