--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -1,10 +1,9 @@
 @use 'variables' as v;
 @use 'mixins' as m;
-@use 'placeholders';
 @use 'sass:color';
 
 .work-section {
-    padding: 0 20px 180px;
+    padding: 50px 20px 180px;
 
     .work {
         margin: 0 auto;
@@ -13,6 +12,10 @@
         &__title {
             margin: 0 0 80px 0;
             @include m.font(60px, 400, v.$color_white);
+
+            @media (max-width: v.$media_min) {
+                display: none;
+            }
         }
 
         &__cards-wrapper {
@@ -79,6 +82,24 @@
             .icon--integration {
                 width: 42px;
                 height: 41px;
+            }
+
+            @media (max-width: v.$media_md) {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+                row-gap: 40px;
+                grid-template-areas: 
+                "dev analysis"
+                "design maintenance"
+                "integration testing";
+
+                .card--analysis,
+                .card--design,
+                .card--dev,
+                .card--maintenance,
+                .card--integration {
+                    justify-self: center;
+                }
             }
         }
     }
